# spotifai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  OSS_SPEC.md  README.md  SECURITY.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  version-bump.yml
docs/: architecture.md  configuration.md  export_schema.md  getting-started.md  logging.md  troubleshooting.md
man/: api.md  ask.md  auth.md  clean.md  export.md  import.md  install.md  main.md  playlist.md
prompts/: README.md
prompts/ask/: 1_0_0.md  1_0_1.md  1_1_0.md  1_1_1.md  1_2_0.md  1_2_1.md
prompts/clean/: 1_0_0.md  1_0_1.md
prompts/playlist/: 1_0_0.md  1_1_0.md  1_1_1.md  1_2_0.md  1_3_0.md  1_4_0.md  1_5_0.md  1_5_1.md
scripts/: changelog-guard.sh  update-versions.sh
src/: api.rs  api_fields.rs  ask.rs  auth.rs  clean.rs  cli.rs  commands_index.rs  export.rs  export_schema.rs  help_agent.rs  import.rs  import_state.rs  install.rs  lib.rs  logging.rs  main.rs  manpages.rs  output.rs  permissions.rs  playlist.rs  providers.rs  session.rs  topic_docs.rs  zad_client.rs
tests/: api_test.rs  ask_test.rs  auth_test.rs  clean_test.rs  discoverability_test.rs  export_test.rs  import_state_test.rs  import_test.rs  install_test.rs  logging_test.rs  output_test.rs  permissions_test.rs  playlist_test.rs  rate_limit_test.rs
website/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.mjs
website/public/: CNAME
website/scripts/: build-seo.mjs  png.mjs  (+3 more)
(+39 files in other folders)
