[package]
name = "spotifai"
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "A Rust CLI for managing your Spotify library and playlists via natural-language queries, powered by zag (agent) and zad (Spotify integration)."
repository = "https://github.com/niclaslindstedt/spotifai"
readme = "README.md"

[[bin]]
name = "spotifai"
path = "src/main.rs"

[lib]
name = "spotifai"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
# §19 logging: structured logging into the always-on debug.log.
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zad = "0.8.1"
zag = "0.17"

[dev-dependencies]
tempfile = "3"